--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -50,6 +50,8 @@ jobs:
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: public
 
   deploy:
     environment:
