--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 # 로컬 개발용 baseURL (배포 시 GitHub Actions에서 자동으로 덮어씀)
 baseURL = 'http://localhost:1313/'
 languageCode = 'ko'
-title = 'My New Hugo Site'
+title = 'STRATO'
 # theme = ''  # 테마를 사용하지 않으므로 주석 처리
 
 [params]
