style single/base -

--- a/hugo.toml
+++ b/hugo.toml
@@ -7,3 +7,13 @@ title = 'STRATO'
 [params]
   description = 'Hugo 사이트입니다'
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+  [markup.highlight]
+    style = "github"
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = false
+
